--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.34.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.4",
